<resources>
    <string name="app_name">Pocket Timer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>
    <string name="action_test">Test Activity</string>
    <string name="title_activity_new_workout">New Workout</string>
    <string name="title_activity_workout">Workout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_display_message">Load Workout</string>
    <string name="title_activity_about">About</string>
    <string name="button_newWorkout">New Workout</string>
    <string name="button_loadWorkout">Load Workout</string>
    <string name="textAbout1">A quick thanks to you for downloading Pocket Timer. I really appreciate any feedback from you, so that Pocket Timer continues to improve and adjust to your needs. To request features, report bugs or just to give me bit of feedback, you can contact me at:</string>
    <string name="mail">pockettimer@gmail.com</string>
    <string name="textAbout2">Have fun working out!</string>
    <!--<string name="textPRO">If you like Pocket Timer and would like to support its developer, you can buy Pocket Timer Pro. It has the same features as the free version, but by buying the PRO version you can show your support and enable me to spend more time improving Pocket Timer!</string>-->
    <string name="time">00:00</string>
    <string name="time_set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="workout">Workout</string>
    <string name="workout_length">Length</string>
    <string name="repetition"> Round</string>
    <string name="repetitions"> Rounds</string>
    <string name="length">Length: </string>
    <string name="total_length">Total length: </string>
    <string name="set"> set</string>
    <string name="Set">Set</string>
    <string name="set_">Set </string>
    <string name="sets"> sets</string>
    <string name="edit">edit</string>
    <string name="remove">remove</string>
    <string name="has_been_removed"> has been removed</string>
    <string name="add_set">Add set</string>
    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="overwritten"> has been overwritten</string>
    <string name="q1">Do you wish the existing Workout </string>
    <string name="q2"> to be overwritten?</string>
    <string name="saved"> has been saved</string>
    <string name="not_empty">Workout name must not be empty.</string>
    <string name="arrayempty">You must define at least one Set.</string>
    <string name="pause">Pause</string>
    <string name="round">Round</string>
    <string name="round_">Round </string>
    <string name="cont">Continue</string>
    <string name="confirm">Confirm</string>
    <string name="really">Do you want to stop this workout?</string>
    <string name="done">Done</string>
    <string name="title_addset">Add Set</string>

    <string name="setname">Set name</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="rounds">Rounds</string>
    <string name="dismiss">Dismiss</string>
    <string name="add">Add</string>
    <string name="stop">Stop</string>
    <string name="nextset">Next Set</string>

    <string name="save">Save</string>
    <string name="restartset">Restart Set</string>
    <string name="start">Start</string>

    <string name="removeall">remove all</string>
    <string name="notificationtext">Press here to access running Pocket Timer Workout</string>
    <string name="Name">Name</string>
    <string name="workoutname">Workout name</string>
    <string name="getPRO">Get Pocket Timer PRO</string>
</resources>
