<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent">



    <com.devspark.robototextview.widget.RobotoEditText
        android:id="@+id/setname"
        android:hint="@string/setname"
        app:typeface="roboto_slab_regular"
        android:inputType="textVisiblePassword"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:maxLines="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            app:typeface="roboto_slab_regular"
            android:textColor="@color/grey"
            android:id="@+id/textViewMin"
            android:layout_gravity="center_vertical" />

        <NumberPicker
            android:id="@+id/numberPickerMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />


        <NumberPicker
            android:id="@+id/numberPickerSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />


        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:typeface="roboto_slab_regular"
            android:text="@string/seconds"
            android:textColor="@color/grey"
            android:id="@+id/textViewSec"
            android:layout_gravity="center_vertical" />

    </LinearLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rounds"
            app:typeface="roboto_slab_regular"
            android:textColor="@color/grey"
            android:id="@+id/textViewRep"
            android:layout_gravity="center_vertical" />

        <NumberPicker
            android:id="@+id/numberPickerRepetitions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />



    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/buttonDismiss"
            android:layout_width="100dp"
            android:layout_alignParentLeft="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/dismiss" />


        <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/buttonAdd"
            android:layout_width="100dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/add" />


    </RelativeLayout>


</LinearLayout>