<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/test"
    tools:context="com.pockettimer.NewWorkoutActivity">




    <com.devspark.robototextview.widget.RobotoEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        app:typeface="roboto_slab_regular"
        android:ems="10"
        android:maxLines="1"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:textColorHint="@color/grey"
        android:id="@+id/setWorkoutName"
        android:hint="@string/workoutname"/>



    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:alwaysDrawnWithCache="true"
        android:dividerHeight="1dp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:horizontalSpacing="3dp"
        android:scrollingCache="true"
        android:smoothScrollbar="true"
        android:stretchMode="columnWidth"
        android:verticalSpacing="3dp"
        android:layout_marginBottom="50dp">

    </ListView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">


        <com.devspark.robototextview.widget.RobotoButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="startWorkout"
            android:id="@+id/buttonStart"
            android:layout_gravity="bottom|right" />

        <com.devspark.robototextview.widget.RobotoButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="saveWorkout"
            android:id="@+id/buttonSave"
            android:layout_gravity="bottom|right" />

    </LinearLayout>


</LinearLayout>
